toolchain/internal/core/analysis/testdata/errors/duplicates/type_rpc_same_name.vdl
// @expect: E805
// Type and RPC share the same name

type Users {
  id: string
}

rpc Users {
  proc GetAll {
    input {}

    output {}
  }
}
